--- a/css/style.scss
+++ b/css/style.scss
@@ -8,9 +8,11 @@ $sm: 459px;
 		@content;
 	}
 }
-*{
+
+* {
 	box-sizing: border-box;
 }
+
 html {
 	font-size: 62.5%;
 }
@@ -57,15 +59,17 @@ ul {
 			border-right: 1px solid #ccc;
 			padding-left: 0;
 		}
-		li:last-child{
+
+		li:last-child {
 			padding-right: 0;
 		}
 		@include max($md) {
 			display: none;
 		}
 	}
+
 	.header-img {
-		margin:8px auto;
+		margin: 8px auto;
 		width: 172px;
 		height: 38px;
 		text-indent: 100%;
@@ -80,7 +84,8 @@ ul {
 			background: #434343 url("../image/img_logo.png") center/100% no-repeat;
 		}
 	}
-	.header-img:hover{
+
+	.header-img:hover {
 		opacity: 0.6;
 	}
 
@@ -92,7 +97,7 @@ ul {
 
 		> ul {
 			max-width: 1200px;
-			margin: 30px auto 10px;
+			margin: 30px auto 0;
 			display: flex;
 			justify-content: space-around;
 			font-weight: bold;
@@ -104,25 +109,32 @@ ul {
 			> li {
 				text-align: center;
 				width: 172px;
-				padding: 10px 10px 16px;
+				padding-top: 12px;
+
+				.ttl {
+					display: inline-block;
+					padding-bottom: 28px;
+				}
 
 				.discription {
 					position: absolute;
+					text-align: left;
 					top: 56px;
 					left: 0;
 					width: 100%;
-					height: 0;
 					padding: 30px;
 					background: #3f464c;
 					color: #dfe1e2;
 					display: none;
 					transition: height 0.5s;
 
-						> li {
+					> li {
+						max-width: 1200px;
+						margin: auto;
 						display: flex;
 
 						.ttl-more {
-							width: 380px;
+							width: 420px;
 							padding-right: 20px;
 							border-right: 1px solid #555;
 
@@ -130,22 +142,21 @@ ul {
 								position: relative;
 								text-decoration: none;
 
-								p {
-									display: inline-block;
+								span {
 									color: #dfe1e2;
 									font-size: 1.8rem;
 									font-weight: normal;
 									margin: 0;
 								}
 
-								p:last-child {
+								span:last-child {
 									font-size: 1.2rem;
 									margin: 0 0 30px 10px;
 									vertical-align: top;
 								}
 							}
 
-							> a::after {
+							a:first-child:after {
 								position: absolute;
 								content: "";
 								background: url("../image/ico_arrow_white_right.png") center/cover no-repeat;
@@ -158,19 +169,16 @@ ul {
 							a {
 								img {
 									display: block;
-									width: 340px;
-									height: 160px;
+									margin-top: 14px;
+									width: 374px;
+									height: 140px;
 									transition: all 0.5s;
 								}
 							}
 
-							a::after {
-								background: none;
-							}
-
 							a:hover {
 								img {
-									opacity: 0.6;
+									opacity: 0.5;
 									transform: scale(1.1);
 								}
 							}
@@ -178,9 +186,10 @@ ul {
 							.int {
 								display: block;
 								margin-top: 20px;
-								width: 340px;
+								width: 374px;
 								font-size: 1.2rem;
 								font-weight: normal;
+								line-height: 2;
 							}
 						}
 
@@ -222,11 +231,13 @@ ul {
 			}
 
 			> li:hover {
-				padding-bottom: 15px;
-				border-bottom: 5px solid #c83922;
+				.ttl {
+					padding-bottom: 23px;
+					border-bottom: 5px solid #c83922;
+					cursor: pointer;
+				}
 
 				.discription {
-					height: 300px;
 					display: block;
 					z-index: 999;
 				}
@@ -240,18 +251,6 @@ ul {
 		@include max($md) {
 			width: 100%;
 		}
-
-		ul {
-			margin: 0;
-
-			li {
-				display: none;
-			}
-
-			.on {
-				display: block;
-			}
-		}
 	}
 }
 /* ヘッダー▲
@@ -264,14 +263,19 @@ ul {
 	margin: auto;
 	font-size: 1.4rem;
 	@include max($md) {
-		width: 100%;
+		width: 93%;
 	}
-	@include max($sm){
-	width: 90%;
+	@include max($sm) {
+		width: 93%;
 	}
-	.news-nav ul {
+
+	.tab-control {
+		display: none;
+	}
+
+	.news-nav {
 		display: flex;
-		justify-content: space-around;
+		justify-content: center;
 		@include max($md) {
 			display: none;
 		}
@@ -281,13 +285,17 @@ ul {
 			border-bottom: 1px solid #ccc;
 			border-right: 1px solid #ccc;
 
-			a {
+			.panels {
 				text-decoration: none;
 				text-align: center;
 				color: #333;
 				display: block;
-				width: 192px;
+				width: 240px;
 				padding: 24px;
+			}
+
+			.panels:hover {
+				cursor: pointer;
 			}
 		}
 
@@ -296,8 +304,7 @@ ul {
 		}
 	}
 
-	.news-list,
-	.news-list:target {
+	.news-list {
 		display: none;
 
 		> li {
@@ -346,6 +353,12 @@ ul {
 				border-top: 1px solid #ccc;
 			}
 
+			.date {
+				@include max($md) {
+					font-size: 1.2rem;
+				}
+			}
+
 			.title {
 				display: block;
 				line-height: 1.5;
@@ -354,59 +367,78 @@ ul {
 		}
 	}
 
-	.news-list:target {
+	#news1-tab:checked ~ #news1 {
+		display: block;
+	}
+
+	#news2-tab:checked ~ #news2 {
+		display: block;
+	}
+
+	#news3-tab:checked ~ #news3 {
+		display: block;
+	}
+
+	#news4-tab:checked ~ #news4 {
+		display: block;
+	}
+
+	#news5-tab:checked ~ #news5 {
 		display: block;
 	}
 }
 
 .about-company {
 	width: 1200px;
-	margin: auto;
+	margin: 60px auto 0;
 	display: flex;
 	justify-content: space-between;
 	@include max($md) {
-		width: 100%;
-		display: flex;
-		justify-content: space-around;
+		width: 93%;
 	}
-	@include max($sm){
-		width: 90%;
-	flex-wrap: wrap;
-	}
-	a {
-		text-decoration: none;
-		color: #333;
-
-		img {
-			transition: opacity 0.3s;
-			@include max($md) {
-				width: 95%;
-			}
-			@include max($sm){
-				width: 100%;
-			}
-		}
-
-		h2 {
-			font-weight: normal;
-			font-size: 2.4rem;
-		}
+	@include max($sm) {
+		width: 93%;
+		flex-wrap: wrap;
 	}
 
-	a:hover {
-		text-decoration: underline;
-
-		img {
-			opacity: 0.6;
-		}
-	}
-
-	P {
+	>div {
 		font-size: 1.4rem;
+		line-height: 2;
 		width: 585px;
 		@include max($md) {
-			width: 90%;
-			margin: 0;
+			width: 48.8%;
+		}
+
+		a {
+			text-decoration: none;
+			color: #333;
+
+			img {
+				transition: opacity 0.3s;
+				@include max($md) {
+					width: 100%;
+				}
+				@include max($sm) {
+					width: 100%;
+				}
+			}
+
+			h2 {
+				font-weight: normal;
+				font-size: 2.4rem;
+				margin: 0;
+				@include max($md) {
+					font-size: 2rem;
+				}
+			}
+		}
+
+		a:hover {
+			text-decoration: underline;
+
+			img {
+				opacity: 0.6;
+			}
 		}
 	}
 }
@@ -421,24 +453,29 @@ ul {
 	.service {
 		width: 1200px;
 		margin: 60px auto;
-		padding: 30px;
+		padding: 40px 30px 30px 0;
 		@include max($md) {
 			width: 100%;
+			padding-left: 30px;
+			margin-top: 30px;
 		}
 
 		h2 {
-			font-size: 4.2rem;
-			@include max($sm){
-			font-size: 3rem;
-			margin: 10px auto;
+			font-family: 'Oswald', sans-serif;
+			font-size: 5rem;
+			font-weight: normal;
+			margin-bottom: 0;
+			@include max($sm) {
+				font-size: 3rem;
+				margin: 10px;
 			}
 		}
 
 		h3 {
-			font-size: 2rem;
-			@include max($sm){
-				font-size: 1.8rem;
+			font-size: 1.8rem;
 			font-weight: normal;
+			@include max($md) {
+				font-size: 1.9rem;
 			}
 		}
 
@@ -446,27 +483,29 @@ ul {
 			display: block;
 			content: "";
 			width: 2.5rem;
-			height: 3rem;
+			height: 3.5rem;
 			border-bottom: 1px solid #fff;
-			@include max($sm){
-			width: 2rem;
-			height: 2rem;
-			}
-		}
-
-		.intro {
-			font-size: 2.4rem;
-			font-weight: bold;
-			@include max($sm){
-				font-size: 1.6rem;
+			@include max($md) {
+				height: 2rem;
 			}
 		}
 
 		p {
+			margin-top: 0;
 			font-size: 1.4rem;
 			line-height: 2;
-			@include max($sm){
-				font-size: 1.2rem;
+			@include max($md) {
+				font-size: 1.3rem;
+			}
+		}
+
+		.intro {
+			margin-top: 40px;
+			font-size: 2.4rem;
+			font-weight: bold;
+			line-height: 1.7;
+			@include max($md) {
+				font-size: 1.8rem;
 			}
 		}
 
@@ -474,7 +513,7 @@ ul {
 			font-size: 1.4rem;
 			font-weight: bold;
 			margin: 20px 0 60px;
-			@include max($sm){
+			@include max($sm) {
 				width: 90%;
 				margin: auto;
 			}
@@ -489,7 +528,7 @@ ul {
 				padding: 20px 60px;
 				border: 2px solid #fff;
 				transition: background-color 0.3s;
-				@include max($sm){
+				@include max($sm) {
 					width: 90%;
 					text-align: center;
 					margin-left: -20px;
@@ -502,7 +541,7 @@ ul {
 				width: 0.5em;
 				height: 1em;
 				background: url("../image/ico_arrow_white_right.png") center/cover no-repeat;
-				right: 40px;
+				right: 20px;
 			}
 
 			a:hover {
@@ -538,7 +577,7 @@ ul {
 			font-size: 1.4rem;
 			text-decoration: none;
 			color: #333;
-			padding: 20px;
+			padding: 22px;
 		}
 
 		a:hover {
@@ -547,22 +586,24 @@ ul {
 	}
 
 	.links {
-		padding-top: 50px;
+		padding-top: 56px;
+		color: #343434;
+
 		ul {
 			width: 1200px;
 			margin: auto;
 			display: flex;
 			justify-content: space-between;
 			@include max($md) {
-				width: 100%;
+				width: 93%;
 				flex-wrap: wrap;
 			}
 
 			li {
 				@include max($md) {
-					width: 50%;
+					width: 48%;
 				}
-				@include max($sm){
+				@include max($sm) {
 					width: 100%;
 					display: flex;
 					justify-content: space-between;
@@ -576,10 +617,7 @@ ul {
 						display: block;
 						transition: opacity 0.3s;
 						@include max($md) {
-							width: 90%;
-						}
-						@include max($sm){
-							width: 80%;
+							width: 100%;
 						}
 					}
 				}
@@ -592,21 +630,45 @@ ul {
 					}
 				}
 
-				.name {
-					font-size: 1.4rem;
-				}
+				.info {
+					margin: 20px 0;
 
-				.txt {
-					font-size: 1.2rem;
-					line-height: 2;
-					width: 278px;
-					@include max($sm){
-						width: 100%;
-						font-size: 1rem;
+					.name {
+						font-size: 1.4rem;
 					}
-					a {
-						text-decoration: none;
-						color: #333;
+
+					.txt {
+						font-size: 1.2rem;
+						line-height: 2;
+						width: 278px;
+						margin-top: 6px;
+						@include max($md) {
+							width: 100%;
+						}
+					}
+
+					.to-account {
+						position: relative;
+
+						a {
+							padding-left: 2rem;
+							text-decoration: none;
+							color: #333;
+						}
+
+						a:before {
+							position: absolute;
+							content: "";
+							width: 0.7em;
+							height: 1.1em;
+							top: 5px;
+							left: 0;
+							background: url("../image/ico_arrow_black_right.png") center/cover no-repeat;
+						}
+
+						a:hover {
+							text-decoration: underline;
+						}
 					}
 				}
 			}
@@ -615,34 +677,36 @@ ul {
 
 	.footer-nav {
 		background: #f2f2f2;
+		color: #5c5c5c;
 		width: 1200px;
 		margin: auto;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		border-top: 1px solid #d3d3d3;
-		padding: 10px 0;
+		border-top: 1px solid #dedede;
+		padding: 10px 0 12px;
 		@include max($md) {
-			width: 90%;
+			width: 93%;
 		}
-		@include max($sm) {
-			width: 100%;
-		}
+
 		ul {
 			display: flex;
 			justify-content: space-around;
+			align-items: baseline;
 			@include max($sm) {
 				display: block;
 			}
+
 			li {
-				border-right: 1px solid #333;
-				padding: 0 2rem;
+				border-right: 1px solid #5c5c5c;
+				padding: 0 1.5rem;
 				@include max($sm) {
 					border-right: none;
 				}
+
 				a {
 					font-size: 1.2rem;
-					line-height: 1.5;
+					line-height: 1.3;
 					text-decoration: none;
 					color: #333;
 				}
@@ -659,6 +723,11 @@ ul {
 			li:last-child {
 				border-right: none;
 			}
+		}
+
+		.copyright {
+			color: #919191;
+			font-size: 1.1rem;
 		}
 	}
 }
