--- a/css/style.css
+++ b/css/style.css
@@ -411,6 +411,7 @@ ul {
 /* ヘッダー▼
 ========================================================================== */
 .top-header {
+  position: relative;
   margin: auto;
   font-size: 1.2rem; }
   @media screen and (max-width: 1199px) {
@@ -467,6 +468,38 @@ ul {
         margin-left: 20px; } }
   .top-header .header-img:hover {
     opacity: 0.6; }
+  .top-header .small-menu {
+    display: none; }
+    @media screen and (max-width: 1199px) {
+      .top-header .small-menu {
+        display: block; } }
+    .top-header .small-menu .menu-btn {
+      width: 15px;
+      height: 20px; }
+      @media screen and (max-width: 1199px) {
+        .top-header .small-menu .menu-btn {
+          display: block;
+          position: absolute;
+          top: 17px;
+          right: 25px; } }
+      .top-header .small-menu .menu-btn span {
+        display: block;
+        width: 100%;
+        height: 2px;
+        background: #fff;
+        margin: 5px; }
+    .top-header .small-menu .small-ttl {
+      display: none; }
+  .top-header .menu-btn.active span:nth-of-type(1) {
+    -webkit-transform: translateY(5px) rotate(-45deg);
+    -ms-transform: translateY(5px) rotate(-45deg);
+    transform: translateY(5px) rotate(-45deg); }
+  .top-header .menu-btn.active span:nth-of-type(2) {
+    display: none; }
+  .top-header .menu-btn.active span:nth-of-type(3) {
+    -webkit-transform: translateY(-5px) rotate(45deg);
+    -ms-transform: translateY(-5px) rotate(45deg);
+    transform: translateY(-5px) rotate(45deg); }
   .top-header .global-nav {
     position: relative; }
     @media screen and (max-width: 1199px) {
@@ -484,9 +517,6 @@ ul {
       justify-content: space-around;
       font-weight: bold;
       font-size: 1.4rem; }
-      @media screen and (max-width: 1199px) {
-        .top-header .global-nav > ul {
-          width: 100%; } }
       .top-header .global-nav > ul > li {
         text-align: center;
         width: 172px;
@@ -1143,7 +1173,7 @@ ul {
             width: 0.6em;
             height: 1em;
             background: url("../image/ico_arrow_white_right.png") center/cover no-repeat;
-            right: 0px; } }
+            right: 0; } }
       .btm .footer-nav ul li:first-child {
         padding-left: 0; }
         @media screen and (max-width: 459px) {
