--- a/css/style.scss
+++ b/css/style.scss
@@ -25,8 +25,8 @@ ul {
 ========================================================================== */
 /* ヘッダー▼
 ========================================================================== */
-
 .top-header {
+	position: relative;
 	margin: auto;
 	font-size: 1.2rem;
 	@include max($md) {
@@ -92,6 +92,48 @@ ul {
 		opacity: 0.6;
 	}
 
+	.small-menu {
+		display: none;
+		@include max($md) {
+			display: block;
+		}
+		.menu-btn {
+			width: 15px;
+			height: 20px;
+			@include max($md) {
+				display: block;
+				position: absolute;
+				top: 17px;
+				right: 25px;
+			}
+
+			span {
+				display: block;
+				width: 100%;
+				height: 2px;
+				background: #fff;
+				margin: 5px;
+			}
+		}
+		.small-ttl{
+			display: none;
+		}
+	}
+
+	.menu-btn.active {
+		span:nth-of-type(1) {
+			transform: translateY(5px) rotate(-45deg);
+		}
+
+		span:nth-of-type(2) {
+			display: none;
+		}
+
+		span:nth-of-type(3) {
+			transform: translateY(-5px) rotate(45deg);
+		}
+	}
+
 	.global-nav {
 		position: relative;
 		@include max($md) {
@@ -105,9 +147,6 @@ ul {
 			justify-content: space-around;
 			font-weight: bold;
 			font-size: 1.4rem;
-			@include max($md) {
-				width: 100%;
-			}
 
 			> li {
 				text-align: center;
@@ -261,7 +300,6 @@ ul {
 ========================================================================== */
 /* メイン▼
 ========================================================================== */
-
 .news {
 	width: 1200px;
 	margin: auto;
@@ -346,10 +384,12 @@ ul {
 				.news-type-ir {
 					background: #c99;
 				}
+
 				.news-type-info,
 				.news-type-publicity {
 					background: #99cccc;
 				}
+
 				.news-type-seminer {
 					background: #999acc;
 				}
@@ -544,6 +584,7 @@ ul {
 			@include max($sm) {
 				margin-bottom: 20px;
 			}
+
 			p {
 				margin: 0 auto;
 				font-size: 1.4rem;
@@ -610,6 +651,7 @@ ul {
 ========================================================================== */
 /* フッター▼
 ========================================================================== */
+
 .btm {
 	background: #f2f2f2;
 
@@ -634,7 +676,7 @@ ul {
 	.links {
 		padding-top: 56px;
 		color: #343434;
-		@include max($sm){
+		@include max($sm) {
 			padding-top: 0;
 		}
 
@@ -684,11 +726,10 @@ ul {
 
 				.info {
 					margin: 20px 0;
-					@include max($sm){
+					@include max($sm) {
 						width: 70%;
 						margin-top: 5px;
 					}
-
 
 					.name {
 						font-size: 1.4rem;
@@ -702,7 +743,7 @@ ul {
 						@include max($md) {
 							width: 100%;
 						}
-						@include max($sm){
+						@include max($sm) {
 							font-size: 1rem;
 						}
 					}
@@ -714,7 +755,7 @@ ul {
 							padding-left: 2rem;
 							text-decoration: none;
 							color: #333;
-							@include max($sm){
+							@include max($sm) {
 								padding-left: 1.2rem;
 							}
 						}
@@ -751,7 +792,7 @@ ul {
 		@include max($md) {
 			width: 93%;
 		}
-		@include max($sm){
+		@include max($sm) {
 			background: #343434;
 			color: #fff;
 			display: block;
@@ -774,7 +815,6 @@ ul {
 				@include max($sm) {
 					border-right: none;
 					border-bottom: 1px solid #484848;
-
 				}
 
 				a {
@@ -782,37 +822,36 @@ ul {
 					line-height: 1.3;
 					text-decoration: none;
 					color: #333;
-					@include max($sm){
+					@include max($sm) {
 						position: relative;
 						display: block;
 						font-size: 1.3rem;
 						color: #fff;
 						padding: 17px 0;
 					}
-
 				}
 
 				a:hover {
 					text-decoration: underline;
 				}
-				a:after{
-					@include max($sm){
+
+				a:after {
+					@include max($sm) {
 						position: absolute;
 						content: "";
 						width: 0.6em;
 						height: 1em;
 						background: url("../image/ico_arrow_white_right.png") center/cover no-repeat;
-						right: 0px;
+						right: 0;
 					}
 				}
 			}
 
 			li:first-child {
 				padding-left: 0;
-				@include max($sm){
+				@include max($sm) {
 					padding-left: 1.5rem;
 				}
-
 			}
 
 			li:last-child {
@@ -823,7 +862,7 @@ ul {
 		.copyright {
 			color: #919191;
 			font-size: 1.1rem;
-			@include max($sm){
+			@include max($sm) {
 				color: #fff;
 				text-align: center;
 				font-size: 0.9rem;
