--- a/css/style.css
+++ b/css/style.css
@@ -393,6 +393,207 @@ template {
 [hidden] {
   display: none; }
 
+/* Slider */
+.slick-slider {
+  position: relative;
+  display: block;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent; }
+
+.slick-list {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  margin: 0;
+  padding: 0; }
+  .slick-list:focus {
+    outline: none; }
+  .slick-list.dragging {
+    cursor: pointer;
+    cursor: hand; }
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0); }
+
+.slick-track {
+  position: relative;
+  left: 0;
+  top: 0;
+  display: block; }
+  .slick-track:before, .slick-track:after {
+    content: "";
+    display: table; }
+  .slick-track:after {
+    clear: both; }
+  .slick-loading .slick-track {
+    visibility: hidden; }
+
+.slick-slide {
+  float: left;
+  height: 100%;
+  min-height: 1px;
+  display: none; }
+  [dir="rtl"] .slick-slide {
+    float: right; }
+  .slick-slide img {
+    display: block; }
+  .slick-slide.slick-loading img {
+    display: none; }
+  .slick-slide.dragging img {
+    pointer-events: none; }
+  .slick-initialized .slick-slide {
+    display: block; }
+  .slick-loading .slick-slide {
+    visibility: hidden; }
+  .slick-vertical .slick-slide {
+    display: block;
+    height: auto;
+    border: 1px solid transparent; }
+
+.slick-arrow.slick-hidden {
+  display: none; }
+
+/* Slider */
+.slick-loading .slick-list {
+  background: #fff url("./ajax-loader.gif") center center no-repeat; }
+
+/* Icons */
+@font-face {
+  font-family: "slick";
+  src: url("./fonts/slick.eot");
+  src: url("./fonts/slick.eot?#iefix") format("embedded-opentype"), url("./fonts/slick.woff") format("woff"), url("./fonts/slick.ttf") format("truetype"), url("./fonts/slick.svg#slick") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+/* Arrows */
+.slick-prev,
+.slick-next {
+  position: absolute;
+  display: block;
+  z-index: 1;
+  height: 70px;
+  width: 40px;
+  line-height: 0px;
+  font-size: 0px;
+  cursor: pointer;
+  background: url(../image/bg_direction_nav.png) no-repeat;
+  opacity: 0.8;
+  color: transparent;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  padding: 0;
+  border: none;
+  outline: none; }
+  .slick-prev:hover, .slick-prev:focus,
+  .slick-next:hover,
+  .slick-next:focus {
+    opacity: 1; }
+  .slick-prev.slick-disabled:before,
+  .slick-next.slick-disabled:before {
+    opacity: 0.25; }
+  .slick-prev:before,
+  .slick-next:before {
+    font-family: "slick";
+    font-size: 20px;
+    line-height: 1;
+    color: white;
+    opacity: 0.75;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale; }
+
+.slick-prev {
+  left: 0; }
+  [dir="rtl"] .slick-prev {
+    left: auto;
+    right: -25px; }
+  .slick-prev:before {
+    content: ""; }
+    [dir="rtl"] .slick-prev:before {
+      content: ""; }
+
+.slick-next {
+  background-position: right;
+  right: 0; }
+  [dir="rtl"] .slick-next {
+    left: -25px;
+    right: auto; }
+  .slick-next:before {
+    content: ""; }
+    [dir="rtl"] .slick-next:before {
+      content: ""; }
+
+/* Dots */
+.slick-dotted.slick-slider {
+  margin-bottom: 30px; }
+
+.slick-dots {
+  position: absolute;
+  bottom: -25px;
+  list-style: none;
+  display: block;
+  text-align: center;
+  padding: -25px;
+  margin: -20px 0;
+  width: 100%; }
+  .slick-dots li {
+    position: relative;
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    margin: 0 1px;
+    padding: 0;
+    cursor: pointer; }
+    .slick-dots li button {
+      border: 0;
+      background: transparent;
+      display: block;
+      height: 20px;
+      width: 20px;
+      outline: none;
+      line-height: 0px;
+      font-size: 0px;
+      color: transparent;
+      padding: 0;
+      cursor: pointer; }
+      .slick-dots li button:hover, .slick-dots li button:focus {
+        outline: none; }
+        .slick-dots li button:hover:before, .slick-dots li button:focus:before {
+          opacity: 1; }
+      .slick-dots li button:before {
+        position: absolute;
+        top: 0;
+        left: 0;
+        content: "•";
+        width: 20px;
+        height: 20px;
+        font-family: "slick";
+        font-size: 28px;
+        line-height: 20px;
+        text-align: center;
+        color: black;
+        opacity: 0.25;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale; }
+    .slick-dots li.slick-active button:before {
+      color: black;
+      opacity: 0.75; }
+
 /* base▼
 ========================================================================== */
 * {
@@ -417,35 +618,6 @@ ul {
   @media screen and (max-width: 1199px) {
     .top-header {
       background: #434343; } }
-  .top-header .lang-nav {
-    max-width: 1200px;
-    margin: 20px auto 0;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: end;
-    -webkit-justify-content: flex-end;
-    -ms-flex-pack: end;
-    justify-content: flex-end; }
-    @media screen and (max-width: 1199px) {
-      .top-header .lang-nav {
-        width: 100%; } }
-    .top-header .lang-nav li {
-      padding: 0 1.3em; }
-      .top-header .lang-nav li a {
-        text-decoration: none;
-        color: #666; }
-      .top-header .lang-nav li a:hover {
-        text-decoration: underline; }
-    .top-header .lang-nav li:first-child {
-      border-right: 1px solid #ccc;
-      padding-left: 0; }
-    .top-header .lang-nav li:last-child {
-      padding-right: 0; }
-    @media screen and (max-width: 1199px) {
-      .top-header .lang-nav {
-        display: none; } }
   .top-header .header-img {
     margin: 8px auto;
     width: 172px;
@@ -474,7 +646,7 @@ ul {
       .top-header .small-menu {
         display: block; } }
     .top-header .small-menu .menu-btn {
-      width: 15px;
+      width: 16px;
       height: 20px; }
       @media screen and (max-width: 1199px) {
         .top-header .small-menu .menu-btn {
@@ -484,22 +656,103 @@ ul {
           right: 25px; } }
       .top-header .small-menu .menu-btn span {
         display: block;
+        border-radius: 1px;
         width: 100%;
         height: 2px;
         background: #fff;
-        margin: 5px; }
-    .top-header .small-menu .small-ttl {
-      display: none; }
+        margin: 5px;
+        -webkit-transition: -webkit-transform 0.5s;
+        transition: -webkit-transform 0.5s;
+        -o-transition: transform 0.5s;
+        transition: transform 0.5s;
+        transition: transform 0.5s, -webkit-transform 0.5s; }
+    .top-header .small-menu ul {
+      display: none;
+      margin: 0; }
+      .top-header .small-menu ul li a {
+        position: relative;
+        display: block;
+        background: #343434;
+        color: #fff;
+        text-decoration: none;
+        font-size: 1.3rem;
+        padding: 18px;
+        margin-bottom: 1px; }
+      .top-header .small-menu ul li a:after {
+        position: absolute;
+        content: "";
+        background: url("../image/ico_arrow_white_right.png") center/cover no-repeat;
+        width: 0.5em;
+        height: 0.8em;
+        top: 40%;
+        right: 30px; }
+  .top-header .lang-nav {
+    position: absolute;
+    margin: 20px auto 0;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+    -webkit-justify-content: flex-end;
+    -ms-flex-pack: end;
+    justify-content: flex-end; }
+    @media screen and (max-width: 1199px) {
+      .top-header .lang-nav {
+        position: absolute;
+        width: 100%;
+        margin: 0;
+        top: 417px;
+        z-index: 999; } }
+    .top-header .lang-nav li {
+      padding: 0 1.3em; }
+      @media screen and (max-width: 1199px) {
+        .top-header .lang-nav li {
+          background: #434343;
+          color: #5a5a5a;
+          text-align: center;
+          padding: 18px;
+          float: left;
+          width: 50%; } }
+      .top-header .lang-nav li a {
+        text-decoration: none;
+        color: #666; }
+        @media screen and (max-width: 1199px) {
+          .top-header .lang-nav li a {
+            color: #fff; } }
+      .top-header .lang-nav li a:hover {
+        text-decoration: underline; }
+        @media screen and (max-width: 1199px) {
+          .top-header .lang-nav li a:hover {
+            text-decoration: none; } }
+      .top-header .lang-nav li a:after {
+        visibility: hidden; }
+    .top-header .lang-nav li:first-child {
+      border-right: 1px solid #ccc;
+      padding-left: 0; }
+      @media screen and (max-width: 1199px) {
+        .top-header .lang-nav li:first-child {
+          border-right: 1px solid #343434; } }
+    .top-header .lang-nav li:last-child {
+      padding: 0; }
+      .top-header .lang-nav li:last-child a {
+        background: #434343; }
   .top-header .menu-btn.active span:nth-of-type(1) {
-    -webkit-transform: translateY(5px) rotate(-45deg);
-    -ms-transform: translateY(5px) rotate(-45deg);
-    transform: translateY(5px) rotate(-45deg); }
+    -webkit-transform: translateY(3px) rotate(-45deg);
+    -ms-transform: translateY(3px) rotate(-45deg);
+    transform: translateY(3px) rotate(-45deg); }
   .top-header .menu-btn.active span:nth-of-type(2) {
     display: none; }
   .top-header .menu-btn.active span:nth-of-type(3) {
-    -webkit-transform: translateY(-5px) rotate(45deg);
-    -ms-transform: translateY(-5px) rotate(45deg);
-    transform: translateY(-5px) rotate(45deg); }
+    -webkit-transform: translateY(-4px) rotate(45deg);
+    -ms-transform: translateY(-4px) rotate(45deg);
+    transform: translateY(-4px) rotate(45deg); }
+  .top-header .menu-btn.active ~ ul {
+    position: absolute;
+    background: #434343;
+    display: block;
+    width: 100%;
+    z-index: 999; }
   .top-header .global-nav {
     position: relative; }
     @media screen and (max-width: 1199px) {
@@ -623,10 +876,15 @@ ul {
         z-index: 999; }
   .top-header .slider {
     max-width: 1200px;
-    margin: auto; }
+    margin: auto;
+    -webkit-transition: opacity 0.5s;
+    -o-transition: opacity 0.5s;
+    transition: opacity 0.5s; }
     @media screen and (max-width: 1199px) {
       .top-header .slider {
         width: 100%; } }
+  .top-header .slider:hover {
+    opacity: 0.6; }
 
 /* ヘッダー▲
 ========================================================================== */
@@ -634,7 +892,7 @@ ul {
 ========================================================================== */
 .news {
   width: 1200px;
-  margin: auto;
+  margin: 70px auto 0;
   font-size: 1.4rem; }
   @media screen and (max-width: 1199px) {
     .news {
