--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,7 @@
 @charset "UTF-8";
-@import "normalize.scss"; /* base▼
+@import "normalize.scss";
+@import "slick.scss";
+@import "slick-theme.scss"; /* base▼
 ========================================================================== */
 $md: 1199px;
 $sm: 459px;
@@ -25,47 +27,13 @@ ul {
 ========================================================================== */
 /* ヘッダー▼
 ========================================================================== */
+
 .top-header {
 	position: relative;
 	margin: auto;
 	font-size: 1.2rem;
 	@include max($md) {
 		background: #434343;
-	}
-
-	.lang-nav {
-		max-width: 1200px;
-		margin: 20px auto 0;
-		display: flex;
-		justify-content: flex-end;
-		@include max($md) {
-			width: 100%;
-		}
-
-		li {
-			padding: 0 1.3em;
-
-			a {
-				text-decoration: none;
-				color: #666;
-			}
-
-			a:hover {
-				text-decoration: underline;
-			}
-		}
-
-		li:first-child {
-			border-right: 1px solid #ccc;
-			padding-left: 0;
-		}
-
-		li:last-child {
-			padding-right: 0;
-		}
-		@include max($md) {
-			display: none;
-		}
 	}
 
 	.header-img {
@@ -94,11 +62,11 @@ ul {
 
 	.small-menu {
 		display: none;
-		@include max($md) {
+		@include max($md){
 			display: block;
 		}
 		.menu-btn {
-			width: 15px;
+			width: 16px;
 			height: 20px;
 			@include max($md) {
 				display: block;
@@ -109,20 +77,105 @@ ul {
 
 			span {
 				display: block;
+				border-radius: 1px;
 				width: 100%;
 				height: 2px;
 				background: #fff;
 				margin: 5px;
+				transition: transform 0.5s;
 			}
 		}
-		.small-ttl{
+
+		ul {
 			display: none;
+			margin: 0;
+
+			li {
+				a {
+					position: relative;
+					display: block;
+					background: #343434;
+					color: #fff;
+					text-decoration: none;
+					font-size: 1.3rem;
+					padding: 18px;
+					margin-bottom: 1px;
+				}
+
+				a:after {
+					position: absolute;
+					content: "";
+					background: url("../image/ico_arrow_white_right.png") center/cover no-repeat;
+					width: 0.5em;
+					height: 0.8em;
+					top: 40%;
+					right: 30px;
+				}
+			}
+		}
+	}
+	.lang-nav {
+		position: absolute;
+		margin: 20px auto 0;
+		display: flex;
+		justify-content: flex-end;
+		@include max($md) {
+			position: absolute;
+			width: 100%;
+			margin: 0;
+			top: 417px;
+			z-index: 999;
+		}
+
+		li {
+			padding: 0 1.3em;
+			@include max($md) {
+				background: #434343;
+				color: #5a5a5a;
+				text-align: center;
+				padding: 18px;
+				float: left;
+				width: 50%;
+			}
+
+			a {
+				text-decoration: none;
+				color: #666;
+				@include max($md) {
+					color: #fff;
+				}
+			}
+
+			a:hover {
+				text-decoration: underline;
+				@include max($md){
+					text-decoration: none;
+				}
+			}
+			a:after{
+				visibility: hidden;
+			}
+		}
+
+		li:first-child {
+			border-right: 1px solid #ccc;
+			padding-left: 0;
+			@include max($md) {
+				border-right: 1px solid #343434;
+			}
+		}
+
+		li:last-child {
+			padding: 0;
+			a{
+				background: #434343;
+			}
 		}
 	}
 
 	.menu-btn.active {
 		span:nth-of-type(1) {
-			transform: translateY(5px) rotate(-45deg);
+			transform: translateY(3px) rotate(-45deg);
 		}
 
 		span:nth-of-type(2) {
@@ -130,8 +183,15 @@ ul {
 		}
 
 		span:nth-of-type(3) {
-			transform: translateY(-5px) rotate(45deg);
+			transform: translateY(-4px) rotate(45deg);
 		}
+	}
+	.menu-btn.active ~ ul{
+		position: absolute;
+		background: #434343;
+		display: block;
+		width: 100%;
+		z-index: 999;
 	}
 
 	.global-nav {
@@ -291,18 +351,24 @@ ul {
 	.slider {
 		max-width: 1200px;
 		margin: auto;
+		transition: opacity 0.5s;
 		@include max($md) {
 			width: 100%;
 		}
+	}
+
+	.slider:hover {
+		opacity: 0.6;
 	}
 }
 /* ヘッダー▲
 ========================================================================== */
 /* メイン▼
 ========================================================================== */
+
 .news {
 	width: 1200px;
-	margin: auto;
+	margin: 70px auto 0;
 	font-size: 1.4rem;
 	@include max($md) {
 		width: 93%;
@@ -651,7 +717,6 @@ ul {
 ========================================================================== */
 /* フッター▼
 ========================================================================== */
-
 .btm {
 	background: #f2f2f2;
 
