--- a/css/style.css
+++ b/css/style.css
@@ -618,6 +618,32 @@ ul {
   @media screen and (max-width: 1199px) {
     .top-header {
       background: #434343; } }
+  .top-header .lang-nav {
+    max-width: 1200px;
+    margin: 20px auto 0;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+    -webkit-justify-content: flex-end;
+    -ms-flex-pack: end;
+    justify-content: flex-end; }
+    @media screen and (max-width: 1199px) {
+      .top-header .lang-nav {
+        display: none; } }
+    .top-header .lang-nav li {
+      padding: 0 1.3em; }
+      .top-header .lang-nav li a {
+        text-decoration: none;
+        color: #666; }
+      .top-header .lang-nav li a:hover {
+        text-decoration: underline; }
+    .top-header .lang-nav li:first-child {
+      border-right: 1px solid #ccc;
+      padding-left: 0; }
+    .top-header .lang-nav li:last-child {
+      padding-right: 0; }
   .top-header .header-img {
     margin: 8px auto;
     width: 172px;
@@ -686,7 +712,7 @@ ul {
         height: 0.8em;
         top: 40%;
         right: 30px; }
-  .top-header .lang-nav {
+  .top-header .small-lang-nav {
     position: absolute;
     margin: 20px auto 0;
     display: -webkit-box;
@@ -698,44 +724,44 @@ ul {
     -ms-flex-pack: end;
     justify-content: flex-end; }
     @media screen and (max-width: 1199px) {
-      .top-header .lang-nav {
+      .top-header .small-lang-nav {
         position: absolute;
         width: 100%;
         margin: 0;
         top: 417px;
         z-index: 999; } }
-    .top-header .lang-nav li {
+    .top-header .small-lang-nav li {
       padding: 0 1.3em; }
       @media screen and (max-width: 1199px) {
-        .top-header .lang-nav li {
+        .top-header .small-lang-nav li {
           background: #434343;
           color: #5a5a5a;
           text-align: center;
           padding: 18px;
           float: left;
           width: 50%; } }
-      .top-header .lang-nav li a {
+      .top-header .small-lang-nav li a {
         text-decoration: none;
         color: #666; }
         @media screen and (max-width: 1199px) {
-          .top-header .lang-nav li a {
+          .top-header .small-lang-nav li a {
             color: #fff; } }
-      .top-header .lang-nav li a:hover {
+      .top-header .small-lang-nav li a:hover {
         text-decoration: underline; }
         @media screen and (max-width: 1199px) {
-          .top-header .lang-nav li a:hover {
+          .top-header .small-lang-nav li a:hover {
             text-decoration: none; } }
-      .top-header .lang-nav li a:after {
+      .top-header .small-lang-nav li a:after {
         visibility: hidden; }
-    .top-header .lang-nav li:first-child {
+    .top-header .small-lang-nav li:first-child {
       border-right: 1px solid #ccc;
       padding-left: 0; }
       @media screen and (max-width: 1199px) {
-        .top-header .lang-nav li:first-child {
+        .top-header .small-lang-nav li:first-child {
           border-right: 1px solid #343434; } }
-    .top-header .lang-nav li:last-child {
+    .top-header .small-lang-nav li:last-child {
       padding: 0; }
-      .top-header .lang-nav li:last-child a {
+      .top-header .small-lang-nav li:last-child a {
         background: #434343; }
   .top-header .menu-btn.active span:nth-of-type(1) {
     -webkit-transform: translateY(3px) rotate(-45deg);
